--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
   "bugs": {
     "url": "https://github.com/jordanmccollam/simple-todo/issues"
   },
-  "homepage": "https://github.com/jordanmccollam/simple-todo#readme"
+  "homepage": "https://github.com/jordanmccollam/simple-todo#readme",
+  "dependencies": {}
 }
