--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "simple-todo",
   "version": "1.0.0",
   "description": "simple todo app developed to practice code and test various hosting services",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd client && npm start",
-    "install": "cd client && npm install",
-    "build": "cd client && npm run build"
+    "start-client": "cd client && npm start",
+    "install-client": "cd client && npm install",
+    "build-client": "cd client && npm run build",
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,10 @@
     "url": "https://github.com/jordanmccollam/simple-todo/issues"
   },
   "homepage": "https://github.com/jordanmccollam/simple-todo#readme",
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
