--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-client": "cd client && npm start",
-    "install-client": "cd client && npm install",
-    "build-client": "cd client && npm run build",
+    "install": "npm install && cd client && npm install",
+    "build": "cd client && npm run build",
     "start": "node server",
     "dev": "nodemon server"
   },
