--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-client": "cd client && npm start",
-    "install": "npm install && cd client && npm install",
+    "install-client": "cd client && npm install",
     "build": "cd client && npm run build",
     "start": "node server",
     "dev": "nodemon server"
